Fixed css break on chatmiddle

--- a/client/src/components/ChatMiddle/ChatMiddle.scss
+++ b/client/src/components/ChatMiddle/ChatMiddle.scss
@@ -73,13 +73,11 @@
         }
 
         .person-img {
-          width: 50px;
-          height: 50px;
           margin-right: 15px;
 
           img {
-            width: 100%;
-            height: 100%;
+            width: 50px;
+            height: 50px;
             object-fit: cover;
             border-radius: 50%;
           }
